# Loop

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CORRECTIVE-ACTION-PLAN.md  CRITIQUE-StartHere.md  FINAL-SUMMARY.md  Phase0-foundations.md  Phase1-backend-tasks.md  Phase2-graph-engine-tasks.md  Phase3-loop-operations-tasks.md  Phase4-compression-tasks.md  Phase5-narrative-tasks.md  QUANTUM-MATHEMATICS-FOR-LOOP-SYSTEMS.md  README.md  REFLECTION-Phase9.md  StartHere  agent-roles.md  checklists.md  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
config/: __init__.py  settings.py
data/fixtures/: test_loops.json
data/graphs/: example_day.json
docs/: GUI-DESIGN-ANALYSIS.md  GUI-SCREENS-EXPANDED.md  PYTHON_ALGORITHMS.md  PYTHON_UNIQUE_FEATURES.md  WRITING-GUIDE.md  api-contracts.md  glossary.md  simulation-lab.md
docs/gui/: MAIN-WORKSPACE-SPEC.md
gui/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
gui/src/: App.tsx
schemas/: day-graph.schema.json  decision.schema.json  epoch.schema.json  equivalence-class.schema.json  knowledge-state.schema.json  loop.schema.json  outcome.schema.json  side-arc.schema.json  sub-loop.schema.json
src/: __init__.py  index.ts
src/arcs/: ArcFSM.ts  ArcLoopMeta.ts  ArcRegistry.ts  ArcScheduler.ts  LooperConstraints.ts  ResolutionModes.ts  SideArcEngine.ts  index.ts  types.ts
src/cli/: __init__.py  commands.ts  index.ts  loop-cli.ts  (+1 more)
tests/: __init__.py  test_compression.py  test_graph.py  test_models.py  test_narrative.py  test_operators.py  test_policies.py  test_storage.py
(+98 files in other folders)
